--- a/HojaVida1/src/hoja-estilo/contacto.css
+++ b/HojaVida1/src/hoja-estilo/contacto.css
@@ -3,13 +3,15 @@
     text-align:center;  
     font-size: 25px;    
     font-family: 'Lobster', cursive;
+    margin: 0 15%;
     background-color: rgba(149, 221, 255, 0.8);    
+    border-radius: 25px;
 } 
 .card-body p{
     color:rgb(116, 115, 115);
     text-align:center;  
     font-size: 25px;    
-    font-family: 'Lobster', cursive;    
+    font-family: 'Lobster', cursive; 
 }
 
 .datos h1{
@@ -18,24 +20,24 @@
 
 form {
     font-family: 'Lobster', cursive;
-    color:rgb(29, 57, 180);     
+    color:rgb(29, 57, 180);   
     font-size: 22px;
-    background-color: rgba(149, 221, 255, 0.8);
+    border-radius: 5%;
+    background-color: rgba(149, 221, 255, 0.8);    
 }           
 
-    button {
-        background-color:rgb(224, 66, 216); 
-    color:rgb(255, 255, 255);    
+button {
+    background-color:rgb(245, 153, 240); 
     font-size: 25px; 
-    border: 2px rgb(187, 25, 160) outset;
-    border-radius:25%;   
-}
+    color: aliceblue;
+    border: 2px rgb(252, 84, 243) outset;
+    border-radius:35%;   
+}   
 
 button:hover{
     background-color:rgb(66, 148, 224);
     font-family: 'Lobster', cursive; 
-    color:rgb(255, 255, 255);     
     font-size: 25px; 
-    border: 2px rgb(46, 141, 230) outset;
-    border-radius:25%;     
+    border: 2px rgb(0, 88, 170)outset;
+    border-radius:35%;     
 }
